# matrix-creator-hal

./: CMakeLists.txt  matrix_hal_tfg.py
cpp/: CMakeLists.txt
cpp/driver/: CMakeLists.txt  creator_memory_map.h  fw_data.h  uart_control.cpp  uart_control.h
demos/: CMakeLists.txt  mic_read_filter.cpp  simple_mic_read.cpp
tfg/: CMakeLists.txt  audio_processor.cpp  audio_processor.hpp  deps.md  matrix_read.cpp  matrix_read_py.cpp  matrix_read_py.hpp  old_cpp_code.cpp  queue.hpp  test_mqtt_async.cpp  test_mqtt_sync.cpp  test_record_async.cpp  test_record_sync.cpp  thread_manager.cpp  thread_manager.hpp
tfg-pruebas/script recepcion/: mqtt_audio_receiver.py
tfg/python/matrix-lite-py/: CMakeLists.txt  README.md  example.py  pyproject.toml
tfg/python/matrix-lite-py/hal_wrapper/: matrix.cpp  matrix.h
tfg/python/matrix-lite-py/hal_wrapper/drivers/: everloop.cpp  everloop.h  gpio.cpp  info.cpp  microphones.cpp  microphones.h  sensors.cpp
tfg/python/matrix-lite-py/matrix_lite/: __init__.py  led.py  mic_helpers.py  sensors.py
tfg/python/nanobind/: CMakeLists.txt  matrix_nanobind.cpp  pyproject.toml
tfg/python/pybind11/: CMakeLists.txt  matrix_python.cpp  pyproject.toml
tfg/python/pybind11-test/: CMakeLists.txt  example.cpp  example.hpp  matrix_python.cpp  matrix_python.hpp  pyproject.toml
utils/: matrix_init.patch  mosquitto_setup.md  mqtt_recv.py
val/: CMakeLists.txt  audio_processor.cpp  audio_processor.hpp  convert_raw_wav.sh  matrix_read.cpp  utils.hpp
